--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
             width: 100%;
             height: 30px;
             background-color: aqua;
-            /* position: sticky; */
-            /* position: -webkit-sticky; */
-            /* top: 0; */
-            /* left: 0; */
         }
 
         .menu-fixed {
             position: fixed;
             top: 0;
             left: 0;
+        }
+
+        .sticky {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            left: 0;
+            z-index: 9999;
         }
     </style>
 </head>
@@ -86,16 +90,36 @@
         <p>Isn't it good Norwegian wood?</p>
     </div>
     <script>
-        const menuEle = document.querySelector('.menu');
-        const offsetTop = menuEle.offsetTop;
-        window.onscroll = function (event) {
-            const scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
-            if (scrollTop > offsetTop) {
-                menuEle.classList.add('menu-fixed');
-            } else {
-                menuEle.classList.remove('menu-fixed');
+        inTheTop(document.querySelector('.menu'));
+
+        function inTheTop(node) {
+            // iOS设备使用position: sticky
+            const isIos = window.navigator.userAgent.indexOf('iPhone') >= 0;
+            if (isIos) {
+                node.classList.add('sticky');
+                return;
             }
-        };
+
+            // 页面滚动的距离
+            const offsetTop = node.offsetTop;
+
+            // 解决元素变为fixed时的抖动
+            const stickyHolder = document.createElement('div');
+            const rect = node.getBoundingClientRect();
+            node.parentNode.replaceChild(stickyHolder, node);
+            stickyHolder.appendChild(node);
+            stickyHolder.style.height = rect.height + 'px';
+            
+            // 当页面滚动时
+            window.onscroll = function (event) {
+                const scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
+                if (scrollTop > offsetTop) {
+                    node.classList.add('menu-fixed');
+                } else {
+                    node.classList.remove('menu-fixed');
+                }
+            };
+        }
     </script>
 </body>
 
