--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
             background-color: antiquewhite;
             width: 100%;
             height: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .menu {
             width: 100%;
             height: 30px;
             background-color: aqua;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .menu-fixed {
@@ -44,7 +50,7 @@
         Norwegian Wood
     </div>
     <div class="menu">
-        some menu
+        beatles
     </div>
     <div class="content">
         <p>I once had a girl</p>
@@ -89,37 +95,9 @@
         <p>So I lit a fire</p>
         <p>Isn't it good Norwegian wood?</p>
     </div>
+    <script src='./inTheTop.js'></script>
     <script>
         inTheTop(document.querySelector('.menu'));
-
-        function inTheTop(node) {
-            // iOS设备使用position: sticky
-            const isIos = window.navigator.userAgent.indexOf('iPhone') >= 0;
-            if (isIos) {
-                node.classList.add('sticky');
-                return;
-            }
-
-            // 页面滚动的距离
-            const offsetTop = node.offsetTop;
-
-            // 解决元素变为fixed时的抖动
-            const stickyHolder = document.createElement('div');
-            const rect = node.getBoundingClientRect();
-            node.parentNode.replaceChild(stickyHolder, node);
-            stickyHolder.appendChild(node);
-            stickyHolder.style.height = rect.height + 'px';
-            
-            // 当页面滚动时
-            window.onscroll = function (event) {
-                const scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
-                if (scrollTop > offsetTop) {
-                    node.classList.add('menu-fixed');
-                } else {
-                    node.classList.remove('menu-fixed');
-                }
-            };
-        }
     </script>
 </body>
 
